--- a/paul_sandbox.ipynb
+++ b/paul_sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,11 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import pickle"
+    "import pickle\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import roc_curve, auc"
    ]
   },
   {
@@ -156,24 +160,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 打开输出文件\n",
+    "# open a new csv file\n",
     "with open('../data/Paul_output.csv', 'w') as output_file:\n",
     "    output_file.write('id,class\\n')  # 写入CSV文件的标题行\n",
     "\n",
-    "    # 逐行读取测试数据集\n",
+    "    # read in test set line by line\n",
     "    with open('../data/test_set.json', 'r') as file:\n",
     "        for line in file:\n",
     "            entry = json.loads(line)\n",
     "            text = entry[\"text\"]\n",
     "\n",
-    "            # 对特征进行统计（示例中使用平均值）\n",
+    "            # calculate for features\n",
     "            X_test_stats = np.mean(text)\n",
     "\n",
-    "            # 使用模型进行预测\n",
+    "            # use svm model to predict\n",
     "            prediction = svm_model.predict(np.array(X_test_stats).reshape(1, -1))\n",
     "\n",
-    "            # 将预测结果写入CSV文件\n",
+    "            # write all output in csv file\n",
     "            output_file.write(f\"{entry['id']},{prediction[0]}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.629695885509839"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#precision\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4578861788617886"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# F1-score\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1529,  414],\n",
+       "       [1253,  704]])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm"
    ]
   },
   {
