--- a/paul_xgboost.ipynb
+++ b/paul_xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200, 300],\n",
+    "    'max_depth': [3, 4, 5],\n",
+    "    'learning_rate': [0.1, 0.01, 0.001]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +90,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3,\n",
+       "             estimator=XGBClassifier(base_score=None, booster=None,\n",
+       "                                     callbacks=None, colsample_bylevel=None,\n",
+       "                                     colsample_bynode=None,\n",
+       "                                     colsample_bytree=None,\n",
+       "                                     early_stopping_rounds=None,\n",
+       "                                     enable_categorical=False, eval_metric=None,\n",
+       "                                     feature_types=None, gamma=None,\n",
+       "                                     gpu_id=None, grow_policy=None,\n",
+       "                                     importance_type=None,\n",
+       "                                     interaction_constraints=None,\n",
+       "                                     learning_rate=None,...\n",
+       "                                     max_cat_threshold=None,\n",
+       "                                     max_cat_to_onehot=None,\n",
+       "                                     max_delta_step=None, max_depth=None,\n",
+       "                                     max_leaves=None, min_child_weight=None,\n",
+       "                                     missing=nan, monotone_constraints=None,\n",
+       "                                     n_estimators=100, n_jobs=None,\n",
+       "                                     num_parallel_tree=None, predictor=None,\n",
+       "                                     random_state=None, ...),\n",
+       "             param_grid={'learning_rate': [0.1, 0.01, 0.001],\n",
+       "                         'max_depth': [3, 4, 5],\n",
+       "                         'n_estimators': [100, 200, 300]},\n",
+       "             scoring='accuracy')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search = GridSearchCV(estimator=xgboost_model, param_grid=param_grid, scoring='accuracy', cv=3)\n",
+    "grid_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best para: {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 300}\n",
+      "best score: 0.8944230769230769\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_params = grid_search.best_params_\n",
+    "best_score = grid_search.best_score_\n",
+    "\n",
+    "print(f'best para: {best_params}')\n",
+    "print(f'best score: {best_score}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -87,67 +167,69 @@
        "              colsample_bytree=None, early_stopping_rounds=None,\n",
        "              enable_categorical=False, eval_metric=None, feature_types=None,\n",
        "              gamma=None, gpu_id=None, grow_policy=None, importance_type=None,\n",
-       "              interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+       "              interaction_constraints=None, learning_rate=0.1, max_bin=None,\n",
        "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
-       "              max_delta_step=None, max_depth=None, max_leaves=None,\n",
+       "              max_delta_step=None, max_depth=5, max_leaves=None,\n",
        "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
-       "              n_estimators=100, n_jobs=None, num_parallel_tree=None,\n",
+       "              n_estimators=300, n_jobs=None, num_parallel_tree=None,\n",
        "              predictor=None, random_state=None, ...)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xgboost_model.fit(X_train, y_train)"
+    "#xgboost_model.fit(X_train, y_train)\n",
+    "best_model = grid_search.best_estimator_\n",
+    "best_model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict(X_test)"
+    "y_pred = best_model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc：0.9041025641025641\n"
+      "Acc:0.9007692307692308\n"
      ]
     }
    ],
    "source": [
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f'Acc：{accuracy}')"
+    "print(f'Acc:{accuracy}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../models/xgboost_model.pkl', 'wb') as model_file:\n",
+    "with open('../models/xgboost_model(grid_search).pkl', 'wb') as model_file:\n",
     "    pickle.dump(xgboost_model, model_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/Xgboost_output.csv', 'w') as output_file:\n",
+    "with open('../data/Xgboost_output(grid_search).csv', 'w') as output_file:\n",
     "    output_file.write('id,class\\n')  # 写入CSV文件的标题行\n",
     "\n",
     "    # 读取测试集\n",
@@ -160,11 +242,18 @@
     "            X_test = vectorizer.transform([\" \".join(map(str, text))])\n",
     "\n",
     "            # 使用XGBoost模型进行预测\n",
-    "            prediction = xgboost_model.predict(X_test)\n",
+    "            prediction = best_model.predict(X_test)\n",
     "\n",
     "            # 写入CSV文件\n",
     "            output_file.write(f\"{entry['id']},{prediction[0]}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
