format the document

--- a/terry.ipynb
+++ b/terry.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,8 @@
     "import json\n",
     "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,30 +40,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(19500, 238) (19500,)\n",
-      "(15600, 238) (15600,) (3900, 238) (3900,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train = []\n",
-    "with open(train_data_1) as f:\n",
-    "    for l in f.readlines():\n",
-    "        train.append(json.loads(l))\n",
     "\n",
     "def prepare_data(data):\n",
     "    texts = pad_sequences([i['text'] for i in data])\n",
     "    labels = np.array([i['label'] for i in data])\n",
     "    return texts, labels\n",
     "\n",
-    "texts, labels = prepare_data(train)\n",
+    "\n",
+    "def load_data(path):\n",
+    "    array = []\n",
+    "    with open(path) as f:\n",
+    "        for l in f.readlines():\n",
+    "            array.append(json.loads(l))\n",
+    "    return array\n",
     "\n",
     "def build_model(train_x, dim=128):\n",
     "    model = Sequential(\n",
@@ -77,13 +72,27 @@
     "    model.compile(optimizer='adam', loss='binary_crossentropy',  metrics=['accuracy'])\n",
     "\n",
     "    return model\n",
-    "print(texts.shape, labels.shape)\n",
     "\n",
-    "x_train, x_val, y_train, y_val = train_test_split(texts, labels, test_size=0.2, random_state=12)\n",
-    "print(x_train.shape, y_train.shape, x_val.shape, y_val.shape)\n",
+    "def to_csv(predictions, name='./data/result.csv'):\n",
+    "    predictions = np.where(predictions > 0.5, 1, 0).reshape(-1)\n",
+    "    df = pd.DataFrame({'id': range(len(predictions)), 'label': predictions})\n",
+    "    df.to_csv(name, index=False)\n",
     "\n",
-    "model = build_model(x_train)\n",
-    "early_stopping = keras.callbacks.EarlyStopping(monitor='val_loss', patience=1, restore_best_weights=True)\n"
+    "\n",
+    "train = load_data(train_data_1)\n",
+    "test = load_data(test_data)\n",
+    "texts, labels = prepare_data(train)\n",
+    "\n",
+    "\n",
+    "test_txt = pad_sequences([i['text'] for i in test], maxlen=texts.shape[1])\n",
+    "x_train, x_val, y_train, y_val = train_test_split(texts, labels, test_size=0.2, random_state=12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RNN Models"
    ]
   },
   {
@@ -105,7 +114,9 @@
     }
    ],
    "source": [
-    "history = model.fit(x_train, y_train, epochs=10, batch_size=64, validation_data=(x_val, y_val), callbacks=[early_stopping])\n"
+    "model = build_model(x_train)\n",
+    "early_stopping = keras.callbacks.EarlyStopping(monitor='val_loss', patience=1, restore_best_weights=True)\n",
+    "history = model.fit(x_train, y_train, epochs=10, batch_size=64, validation_data=(x_val, y_val), callbacks=[early_stopping])"
    ]
   },
   {
@@ -122,22 +133,23 @@
     }
    ],
    "source": [
-    "test = []\n",
-    "with open(test_data) as f:\n",
-    "    for l in f.readlines():\n",
-    "        test.append(json.loads(l))\n",
-    "\n",
-    "test_txt = pad_sequences([i['text'] for i in test], maxlen=texts.shape[1])\n",
-    "\n",
     "predictions = model.predict(test_txt)\n",
-    "\n",
-    "def to_csv(predictions, name='./data/result.csv'):\n",
-    "    predictions = np.where(predictions > 0.5, 1, 0).reshape(-1)\n",
-    "    df = pd.DataFrame({'id': range(len(predictions)), 'label': predictions})\n",
-    "    df.to_csv(name, index=False)\n",
-    "\n",
     "to_csv(predictions)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
