--- a/paul_logistic.ipynb
+++ b/paul_logistic.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import json\n",
+    "import pickle\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-4-07b0c7f8f9f5>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "<ipython-input-69-07b0c7f8f9f5>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  X = np.array([entry[\"text\"] for entry in train_data])\n"
      ]
     }
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,11 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = CountVectorizer()\n",
+    "vectorizer = CountVectorizer(ngram_range=(1,2))\n",
+    "#vectorizer = TfidfVectorizer()\n",
     "X_train_text = [' '.join(map(str, sample)) for sample in X_train]\n",
     "X_test_text = [' '.join(map(str, sample)) for sample in X_test]\n",
     "\n",
@@ -73,62 +77,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression()"
+    "logistic_model = LogisticRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('../models/logistic_model(N-grams).pkl', 'wb') as model_file:\n",
+    "#     pickle.dump(logistic_model, model_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train_transformed, y_train)"
+    "logistic_model.fit(X_train_transformed, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9076923076923077\n"
+      "Accuracy: 0.926923076923077\n"
      ]
     }
    ],
    "source": [
-    "y_pred = model.predict(X_test_transformed)\n",
+    "y_pred = logistic_model.predict(X_test_transformed)\n",
     "\n",
     "# output acc\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
@@ -137,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/logistic_output.csv', 'w') as output_file:\n",
+    "with open('../data/output_csv/logistic_output.csv', 'w') as output_file:\n",
     "    output_file.write('id,class\\n')  \n",
     "\n",
     "    # read in dataset\n",
@@ -154,7 +154,7 @@
     "            X_test = vectorizer.transform([\" \".join(map(str, text))])\n",
     "\n",
     "            # use logistic model to predict\n",
-    "            prediction = model.predict(X_test)\n",
+    "            prediction = logistic_model.predict(X_test)\n",
     "\n",
     "            # output csv\n",
     "            output_file.write(f\"{entry['id']},{prediction[0]}\\n\")"
