--- a/paul_logistic.ipynb
+++ b/paul_logistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,18 @@
     "import json\n",
     "import pickle\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import HashingVectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-69-07b0c7f8f9f5>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "<ipython-input-350-07b0c7f8f9f5>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  X = np.array([entry[\"text\"] for entry in train_data])\n"
      ]
     }
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,12 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# BOW n-grams\n",
+    "#vectorizer = HashingVectorizer(n_features=10000)\n",
     "vectorizer = CountVectorizer(ngram_range=(1,2))\n",
-    "#vectorizer = TfidfVectorizer()\n",
+    "\n",
     "X_train_text = [' '.join(map(str, sample)) for sample in X_train]\n",
     "X_test_text = [' '.join(map(str, sample)) for sample in X_test]\n",
     "\n",
@@ -77,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,18 +89,171 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# with open('../models/logistic_model(N-grams).pkl', 'wb') as model_file:\n",
-    "#     pickle.dump(logistic_model, model_file)"
+    "### 插入部分"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {'C': [0.1, 1, 10]}\n",
+    "grid_search = GridSearchCV(logistic_model, param_grid, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search = GridSearchCV(logistic_model, param_grid, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=LogisticRegression(),\n",
+       "             param_grid={'C': [0.1, 1, 10]})"
+      ]
+     },
+     "execution_count": 359,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=10)"
+      ]
+     },
+     "execution_count": 360,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model = grid_search.best_estimator_\n",
+    "best_model.fit(X_train_transformed, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.9302564102564103\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = best_model.predict(X_test_transformed)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Test Accuracy: {accuracy}\")\n",
+    "# kaggle结果76.8%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 插入结束"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +262,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +311,7 @@
     "            X_test = vectorizer.transform([\" \".join(map(str, text))])\n",
     "\n",
     "            # use logistic model to predict\n",
-    "            prediction = logistic_model.predict(X_test)\n",
+    "            prediction = best_model.predict(X_test)\n",
     "\n",
     "            # output csv\n",
     "            output_file.write(f\"{entry['id']},{prediction[0]}\\n\")"
