--- a/paul_logistic.ipynb
+++ b/paul_logistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,33 +16,78 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.feature_extraction.text import HashingVectorizer"
+    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19500"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_data = []\n",
     "\n",
     "with open('../data/domain1_train.json', 'r') as file:\n",
     "    for line in file:\n",
     "        data = json.loads(line)\n",
-    "        train_data.append(data)"
+    "        train_data.append(data)\n",
+    "len(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19500"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#data cleaning\n",
+    "# texts = [data[\"text\"] for data in train_data]\n",
+    "\n",
+    "# # 设置所需的固定长度（假设为100）\n",
+    "# max_length = 100\n",
+    "\n",
+    "# # 对文本进行padding\n",
+    "# padded_texts = pad_sequences(texts, maxlen=max_length, padding='post', truncating='post')\n",
+    "\n",
+    "# # 将padding后的文本替换原来的文本\n",
+    "# for i in range(len(train_data)):\n",
+    "#     train_data[i][\"text\"] = padded_texts[i].tolist()\n",
+    "# len(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-350-07b0c7f8f9f5>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "<ipython-input-185-07b0c7f8f9f5>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  X = np.array([entry[\"text\"] for entry in train_data])\n"
      ]
     }
@@ -54,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
-    "logistic_model = LogisticRegression()"
+    "logistic_model = LogisticRegression(penalty='l2',max_iter=10000)"
    ]
   },
   {
@@ -97,90 +142,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {'C': [0.1, 1, 10]}\n",
-    "grid_search = GridSearchCV(logistic_model, param_grid, cv=5)"
+    "param_grid = {\n",
+    "    'C': [0.1, 1, 10],\n",
+    "    'multi_class': ['ovr', 'multinomial'],\n",
+    "    'class_weight': [None, 'balanced', {0: 1, 1: 2}] \n",
+    "}\n",
+    "grid_search = GridSearchCV(logistic_model, param_grid, cv=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_search = GridSearchCV(logistic_model, param_grid, cv=5)"
+    "grid_search = GridSearchCV(logistic_model, param_grid, cv=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "GridSearchCV(cv=5, estimator=LogisticRegression(),\n",
-       "             param_grid={'C': [0.1, 1, 10]})"
+       "GridSearchCV(cv=10, estimator=LogisticRegression(max_iter=10000),\n",
+       "             param_grid={'C': [0.1, 1, 10],\n",
+       "                         'class_weight': [None, 'balanced', {0: 1, 1: 2}],\n",
+       "                         'multi_class': ['ovr', 'multinomial']})"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,42 +188,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=10)"
+       "LogisticRegression(C=10, max_iter=10000, multi_class='ovr')"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "best_model = grid_search.best_estimator_\n",
-    "best_model.fit(X_train_transformed, y_train)\n"
+    "best_model.fit(X_train_transformed, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -240,8 +223,7 @@
    "source": [
     "y_pred = best_model.predict(X_test_transformed)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f\"Test Accuracy: {accuracy}\")\n",
-    "# kaggle结果76.8%"
+    "print(f\"Test Accuracy: {accuracy}\")"
    ]
   },
   {
@@ -294,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
