--- a/Hao_logistic_with_domain2.ipynb
+++ b/Hao_logistic_with_domain2.ipynb
@@ -186,16 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model train: 36046 val: 2366\n",
-      "Fold: 0, Val Accuracy: 0.9036, Train Accuracy:  0.9984\n",
-      "model train: 36046 val: 2366\n"
+      "model train: 26592 val: 2364\n",
+      "Fold: 1, Val Accuracy: 0.6607, Train Accuracy:  0.9995\n",
+      "model train: 26592 val: 2364\n",
+      "Fold: 2, Val Accuracy: 0.6933, Train Accuracy:  0.9996\n",
+      "model train: 26592 val: 2364\n",
+      "Fold: 3, Val Accuracy: 0.7030, Train Accuracy:  0.9978\n",
+      "\n",
+      "Average Accuracy: nan\n"
      ]
     }
    ],
@@ -210,7 +215,7 @@
     "        data = json.loads(line)\n",
     "        train_data_1.append(data)\n",
     "\n",
-    "k = 7  # Number of folds\n",
+    "k = 3  # Number of folds\n",
     "kf = KFold(n_splits=k)\n",
     "\n",
     "\n",
@@ -228,7 +233,7 @@
     "    \n",
     "    # print(f\"model train after add more human: {len(train_all)}\")\n",
     "\n",
-    "    for i in [1,2,3,4,5,6,7]:\n",
+    "    for i in [1,3,4]:\n",
     "    \n",
     "                \n",
     "        train_x = np.array(train_data_2_machine_per_model[i])\n",
@@ -269,7 +274,7 @@
     "    y_pred_train = best_model.predict(X_train_transformed)\n",
     "    accuracy_trian = accuracy_score(y_train, y_pred_train)\n",
     "\n",
-    "    print(f\"Fold: {len(scores)}, Val Accuracy: {accuracy:.4f}, Train Accuracy: {accuracy_trian: .4f}\")\n",
+    "    print(f\"Fold: {len(models)}, Val Accuracy: {accuracy:.4f}, Train Accuracy: {accuracy_trian: .4f}\")\n",
     "    \n",
     "    # break\n",
     "\n",
@@ -278,11 +283,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/haoqian/SML_T18/Hao_logistic_with_domain2.ipynb Cell 5\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/haoqian/SML_T18/Hao_logistic_with_domain2.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m selected_model \u001b[39m=\u001b[39m models[\u001b[39m7\u001b[39;49m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/haoqian/SML_T18/Hao_logistic_with_domain2.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mlogistic_output_cross_validation.csv\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m output_file:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/haoqian/SML_T18/Hao_logistic_with_domain2.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     output_file\u001b[39m.\u001b[39mwrite(\u001b[39m'\u001b[39m\u001b[39mid,class\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)  \n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
-    "selected_model = models[1]\n",
+    "selected_model = models[2]\n",
     "\n",
     "with open('logistic_output_cross_validation.csv', 'w') as output_file:\n",
     "    output_file.write('id,class\\n')  \n",
